improve tags managment